<resources>
    <string name="app_name">PruebaSuperHeroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Nombre Completo: </string>
    <string name="intelligence">Inteligencia: </string>
    <string name="strenght">Fuerza:</string>
    <string name="speed">Velocidad:</string>
    <string name="durability">Resistencia:</string>
    <string name="power">Poder:</string>
    <string name="combat">Combate:</string>
    <string name="nombre">Nombre</string>
    <string name="todo">TODO</string>
    <string name="desconocido">Desconocido</string>
    <string name="desco">Desconocido</string>

</resources>